// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reEngagementEmail plantilla asunto; preheader oculto; tip determinista para 7 días (snapshot mínimo) 1`] = `"Hace tiempo que no abres Anto"`;

exports[`reEngagementEmail plantilla asunto; preheader oculto; tip determinista para 7 días (snapshot mínimo) 2`] = `
{
  "mencionaSieteDias": true,
  "preheaderOculto": true,
  "tipIndice2": true,
}
`;

exports[`reEngagementEmail plantilla language en asunto; tip determinista para 7 días en inglés 1`] = `"It has been a while since you opened Anto"`;

exports[`reEngagementEmail plantilla language en asunto; tip determinista para 7 días en inglés 2`] = `
{
  "mencionaSieteDias": true,
  "openAppCta": true,
  "tipIndice2": true,
}
`;

exports[`reEngagementEmail plantilla language en normaliza días inválidos a 1 y rota tip en inglés 1`] = `
{
  "subject": "It has been a while since you opened Anto",
  "tipIndice1": true,
  "unDiaEnCuerpo": true,
}
`;

exports[`reEngagementEmail plantilla normaliza días inválidos a 1 y rota tip (índice 1) 1`] = `
{
  "subject": "Hace tiempo que no abres Anto",
  "tipIndice1": true,
  "unDiaEnCuerpo": true,
}
`;
